--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+
+@import url('./public/poppins.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html, #root {
+	font-family: 'Poppins', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
+}
